--- a/SID_32/src/application/views/popups/FXMLPopUpAddVariableToMonitorize.fxml
+++ b/SID_32/src/application/views/popups/FXMLPopUpAddVariableToMonitorize.fxml
@@ -11,12 +11,20 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane pickOnBounds="false" prefHeight="220.0" prefWidth="460.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane pickOnBounds="false" prefHeight="220.0"
+	prefWidth="460.0" xmlns="http://javafx.com/javafx/8"
+	xmlns:fx="http://javafx.com/fxml/1">
 	<children>
-		<VBox alignment="CENTER" layoutX="32.0" layoutY="132.0" prefHeight="248.0" prefWidth="380.0" spacing="10.0" AnchorPane.bottomAnchor="10.0" AnchorPane.leftAnchor="10.0" AnchorPane.rightAnchor="10.0" AnchorPane.topAnchor="10.0">
+		<VBox alignment="CENTER" layoutX="32.0" layoutY="132.0"
+			prefHeight="248.0" prefWidth="380.0" spacing="10.0"
+			AnchorPane.bottomAnchor="10.0" AnchorPane.leftAnchor="10.0"
+			AnchorPane.rightAnchor="10.0" AnchorPane.topAnchor="10.0">
 			<children>
-				<ListView id="variavel_to_add_listview" fx:id="variables_not_monitorized_list_view" prefHeight="157.0" prefWidth="440.0" />
-				<Button id="ok_btn" mnemonicParsing="false" onAction="#addVariableToMonitorize" prefWidth="80.0" text="OK" textFill="WHITE">
+				<ListView id="variavel_to_add_listview"
+					fx:id="variables_list_view" prefHeight="157.0" prefWidth="440.0" />
+				<Button id="ok_btn" mnemonicParsing="false"
+					onAction="#addVariableToMonitorize" prefWidth="80.0" text="OK"
+					textFill="WHITE">
 					<cursor>
 						<Cursor fx:constant="HAND" />
 					</cursor>
